--- a/spaceoddity_orig.conf
+++ b/spaceoddity_orig.conf
@@ -8,13 +8,13 @@
 
 [spaceoddity]
  
-# or 0 to turn off wallpaper, or comment out - default is 0
+# or 0 to turn off wallpaper, or comment out - default is 1
 ENABLED=1
 
 # or 1 to turn on caption, or comment out - default is 0
 CAPTION=0 
 
-# the rest of these are for the spaceoddity_c script
+# the rest of these are for the caption
 
 # text red value
 FG_R=255
