--- a/_gui/spaceoddity.desktop
+++ b/_gui/spaceoddity.desktop
@@ -6,6 +6,8 @@
 # License : WTFPLv2                                              \          /  #
 #------------------------------------------------------------------------------#
 
+# TODO remove user name!
+
 [Desktop Entry]
 Name[en_US]=SpaceOddity
 Comment[en_US]=Change your wallpaper to NASA's Astronomy Picture Of the Day
