--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "todo-tree.tree.scanMode": "workspace only",
+    "todo-tree.tree.scanMode": "workspace",
     "todo-tree.tree.disableCompactFolders": false,
     "todo-tree.tree.showCountsInTree": true
 }
